# mcp-non-dev-workflows

./: .gitignore  README.md  claude_desktop_config.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
mcp_compliance/: __init__.py  frameworks.yaml  server.py
mcp_dealflow/: __init__.py  server.py
mcp_escalation/: __init__.py  routing_rules.yaml  server.py
shared/: __init__.py
src/: cli.ts  index.ts  server.ts  storage.ts
src/workflows/: compliance.ts  dealflow.ts  support.ts
tests/: test_compliance.py  test_dealflow.py  test_escalation.py  workflows.test.ts
